src/test/deca/context/valid/classes/method_selection.deca
// Description :
//
// Resultats :
//    OK

class A { int f() { return 1; } }

{
    A a = new A();
    int y = a.f();
}

