src/test/deca/context/invalid/avecObjet/non_existant_type_asm.deca
// Description :
//    Type de methode asm inconnu
//
// Resultats :
//    Erreur contextuelle
//    Ligne 9 : Type MonType non déclaré

class A {
    MonType f() asm("RTS");
}